# zero2prd

./: Cargo.toml
.github/workflows/: rust.yml
scripts/: init_db.sh
src/: main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
