[package]
name = "zero2prd"
version = "0.1.0"
authors = ["Gildardo Rosas <gildardo.rosas96@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prd"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
config = "0.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]